fix card for ritch

--- a/card.htm
+++ b/card.htm
@@ -65,10 +65,10 @@
                     >
                     <div class="col-8"><span class="float-end title px-5" style="cursor: pointer;">. . .</span></div>
                 </div>
-                <div class="row px-5 mb-3 mt-3">
+                <div class="row  mb-3 mt-3">
                     <h3 class="col-9 title"><span class="label">Balance</span>$1256,90</h3>
                 </div>
-                <div class="row px-5  mt-3 mb-3">
+                <div class="row mt-3 mb-3">
                     <h3 class="col-12 title"><span class="label">Card number</span>....9905</h3>
                 </div>
                 <div class="row">
