full css to mastercard

--- a/checkout.htm
+++ b/checkout.htm
@@ -99,7 +99,7 @@
                 <h5 class="mb-4">Order Summary</h5>
                 <div class="row">
                     <div class="col-12">
-                        <ul style="list-style-type: none;">
+                        <ul style="list-style-type: none; padding: 0%;">
                             <li class="text-muted m-3">Sub Total<span class="float-right text-lead" style="font-weight: bold;">$26.92</span></li>
                             <li class="text-muted m-3">Discont<span class="float-right text-lead" style="font-weight: bold;">$26.92</span></li>
                             <hr>
