--- a/index.htm
+++ b/index.htm
@@ -4,19 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <!-- link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous" -->
     <title>krezypay / Component</title>
+    <style>
+        .primary{
+            color:  #0d6efd;
+        }
+        a {
+            color: #6236FF;
+            outline: 0 !important;
+            text-decoration: none;
+        }
+        .container{
+            display: block;
+            padding-left: 25%;
+            padding-right: 25%;
+            margin-top: 2%;
+        }
+        .row{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+        }
+        .btn{
+            border: 1px solid  #0d6efd;
+            padding: 16px 32px 16px 32px;
+        }
+        .bg-primary{
+            background-color:#0d6efd;
+            color: white;
+        }
+        .bg-primary:hover{
+            background-color: white;
+            color: #0d6efd;
+        }
+        .btn-round{
+            border-radius: 16px ;
+        }
+        .center{
+            justify-content: center;
+            align-items: center;
+        }
+
+    </style>
+
 </head>
 <body>
-    <div class="conainer mt-5">
-        <div class="row">
-            <div class="col-md-3 col-12 mx-auto">
-                <div class="btn-group" role="group" aria-label="Basic outlined example">
-                    <a href="./checkout.htm" type="button" class="btn btn-lg btn-outline-primary">Checkout</a>
-                    <a href="./index.htm" type="button" class="btn btn-lg btn-outline-primary">Home</a>
-                    <a href="./card.htm" type="button" class="btn btn-lg btn-outline-primary">Master Card</a>
-                </div>
-            </div>
+    <div class="container mt-5">
+        <div class="row center">
+            <a href="./checkout.htm" type="button" class="btn bg-primary btn-round">Checkout</a>
+            <a href="./index.htm" type="button" class="btn bg-primary  btn-round">Home</a>
+            <a href="./card.htm" type="button" class="btn bg-primary  btn-round">Master Card</a>
         </div>
     </div>
 </body>
