--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
     <div class="container mt-5">
         <div class="row center">
             <a href="./checkout.htm" type="button" class="btn bg-primary btn-round">Checkout</a>
-            <a href="./index.htm" type="button" class="btn bg-primary  btn-round">Home</a>
+            <a href="./home.htm" type="button" class="btn bg-primary  btn-round">Home</a>
             <a href="./card.htm" type="button" class="btn bg-primary  btn-round">Master Card</a>
         </div>
     </div>
