--- a/home.htm
+++ b/home.htm
@@ -274,9 +274,9 @@
         <div class="container-fluid py-5 bg-img" style="background-color:#ffffff !important;">
           <div class="container">
             <div class="row">
-              <div class="col-md-6 mx-auto">
-                <h1 class="text-center" >A Clean & Easy To Use Experience</h1>
-                <h2 class="my-4 style-gradient text-center">With Complete Ease.</h2>
+              <div class="col-md-8 mx-auto">
+                <h1 style="font-size: 56px;" class="text-center" >A Clean & Easy To Use Experience</h1>
+                <h2 style="font-size: 45px;" class="my-4 style-gradient text-center">With Complete Ease.</h2>
                 <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
               </div>
             </div>
