add email template

--- a/index.htm
+++ b/index.htm
@@ -55,6 +55,7 @@
             <a href="./checkout.htm" type="button" class="btn bg-primary btn-round">Checkout</a>
             <a href="./home.htm" type="button" class="btn bg-primary  btn-round">Home</a>
             <a href="./card.htm" type="button" class="btn bg-primary  btn-round">Master Card</a>
+            <a href="./factureEmail.html" type="button" class="btn bg-primary  btn-round">Email Facture</a>
         </div>
     </div>
 </body>
