add image to home page

--- a/home.htm
+++ b/home.htm
@@ -131,7 +131,7 @@
       <section class="bgColor bg-img">
         <div class="container py-5">
             <div class="row">
-                <div class="col-md-5 col-12 py-5">
+                <div class="col-md-5 col-12 " style="margin-top: 7%;">
                     <h1 class="text-light title">Your go-to source to manage payment</h1>
                     <h1 class="my-4 style-gradient">With Complete Ease.</h1>
                     <p class="my-4 text-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis magni assumenda sunt nulla facilis nesciunt.</p>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="col-md-7 col-12">
-                  <img src="./img/home1.png" width="100%" />
+                  <img src="./img/new/krezypaywebArtboard-1_045320.png" width="100%" />
                 </div>
             </div>
         </div>
@@ -220,9 +220,8 @@
             </div>
             <div class="col-md-6">
               <div>
-                <img src="./img/krezypay,obile.png"  class="rounded" alt="">
+                <img src="./img/new/webPhoneArtboard-1_014411.png" width="50%"  class="rounded px-5" style="margin-left: 50%;" alt="">
               </div>
-
             </div>
           </div>
         </div>
@@ -261,17 +260,29 @@
                       </div>
                       <h4>Anytime Transaction</h4>
                       <p class="color-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus vitae quidem pariatur quas ducimus, sequi voluptates aspernatur illum distinctio soluta!</p>
+                      <div class="col-12">
+                        <i class="fa fa-university rounded-circle p-3 bg-dark text-light mb-3" aria-hidden="true"></i>
+                      </div>
+                      <h4>Anytime Transaction</h4>
+                      <p class="color-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus vitae quidem pariatur quas ducimus, sequi voluptates aspernatur illum distinctio soluta!</p>
+                      <div class="col-12">
+                        <i class="fa fa-university rounded-circle p-3 bg-dark text-light mb-3" aria-hidden="true"></i>
+                      </div>
+                      <h4>Anytime Transaction</h4>
+                      <p class="color-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus vitae quidem pariatur quas ducimus, sequi voluptates aspernatur illum distinctio soluta!</p>
                       <h4>Strong Security</h4>
                       <p class="color-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae in incidunt nobis fuga dignissimos?</p>
                     </div>
                   </div>
                   <div class="col-md-4 col-12">
-                      <img src="./img/card1.png" width="" alt="">
+                      <img src="./img/new/webCard2Artboard-1_014500.png" width="100%" alt="">
                   </div>
                 </div>
 
               </div>
-              <div class="col-4"></div>
+              <div class="col-4">
+                <img src="./img/new/webCard3Artboard-1_014346.png" width="200%" alt="">
+              </div>
 
             </div>
             <div class="col-3"></div>
