--- a/home.htm
+++ b/home.htm
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="col-md-7 col-12">
-                  <img src="./img/new/krezypaywebArtboard-1_045320.png" width="100%" />
+                  <img src="./img/new/krezypaywebArtboard-1_045320.png" width="100%" class="px-5" />
                 </div>
             </div>
         </div>
@@ -220,7 +220,7 @@
             </div>
             <div class="col-md-6">
               <div>
-                <img src="./img/new/webPhoneArtboard-1_014411.png" width="50%"  class="rounded px-5" style="margin-left: 50%;" alt="">
+                <img src="./img/new/webPhoneArtboard-1_014411.png" width="50%"  class="rounded px-5 mx-5" alt="">
               </div>
             </div>
           </div>
@@ -251,7 +251,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-5 rounded py-5 px-5" style="background-color: #101023;">
+              <div class="col-md-5 col-12 rounded py-5 px-5" style="background-color: #101023;">
                 <div class="row">
                   <div class="col-8">
                     <div class="row">
@@ -265,13 +265,7 @@
                       </div>
                       <h4>Anytime Transaction</h4>
                       <p class="color-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus vitae quidem pariatur quas ducimus, sequi voluptates aspernatur illum distinctio soluta!</p>
-                      <div class="col-12">
-                        <i class="fa fa-university rounded-circle p-3 bg-dark text-light mb-3" aria-hidden="true"></i>
-                      </div>
-                      <h4>Anytime Transaction</h4>
-                      <p class="color-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus vitae quidem pariatur quas ducimus, sequi voluptates aspernatur illum distinctio soluta!</p>
-                      <h4>Strong Security</h4>
-                      <p class="color-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae in incidunt nobis fuga dignissimos?</p>
+                     
                     </div>
                   </div>
                   <div class="col-md-4 col-12">
@@ -280,8 +274,8 @@
                 </div>
 
               </div>
-              <div class="col-4">
-                <img src="./img/new/webCard3Artboard-1_014346.png" width="200%" alt="">
+              <div class="col-md-4 col-12">
+                <img src="./img/new/webCard3Artboard-1_014346.png" class="mx-5" width="100%" alt="">
               </div>
 
             </div>
@@ -503,14 +497,14 @@
 
               <div class="col-12 rounded bg-footer">
                 <div class="row m-5">
-                  <div class="col-1">
-                    <div class="rounded-circle p-3" style="background-color:#5f5883 !important;"><i class="fa  fa-3x fa-envelope-o " aria-hidden="true"></i></div>
+                  <div class="col-md-1 col-3">
+                    <div class="rounded-circle px-4 py-4 text-center" style="background-color:#5f5883 !important;"><i class="fa  fa-2x fa-envelope-o " aria-hidden="true"></i></div>
                   </div>
-                  <div class="col-7">
+                  <div class="col-md-7">
                     <h3>Get Freshly Baked Marketing Tips</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita ullam nihil quasi assumenda aliquam pariatur voluptas, soluta asperiores, sint exercitationem dolor consequatur quisquam eius placeat.</p>
                   </div>
-                  <div class="col-4 mt-4">
+                  <div class="col-md-4 col-12 mt-4">
                     <div class="input-group mb-5">
                       <input type="text" class="form-control circle" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                       <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#ffffff !important;" id="basic-addon2"><i class="fa fa-envelope-o" aria-hidden="true"></i></span></button>
@@ -523,7 +517,7 @@
               </div>
 
               <div class="row">
-                <div class="col-md-4 rounded mt-5 p-3 " style="background-color:#463e7046 !important;">
+                <div class="col-md-4 col-12 rounded mt-5 p-3 " style="background-color:#463e7046 !important;">
                   <h3>KrezyPay</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptatem velit nemo voluptate nam aliquid.</p>
                   <div>
@@ -531,7 +525,7 @@
                     <i class="fa fa-youtube-square fa-3x" aria-hidden="true"></i>
                   </div>
                 </div>
-                <div class="col-md-4 mt-5">
+                <div class="col-md-4 col-12 mt-5">
                   <div class="row">
                     <div class="col-6 mx-auto">
                       <h4>Quick Links</h4>
@@ -545,7 +539,7 @@
                     </div>
                   </div> 
                 </div>
-                <div class="col-md-4 mt-5">
+                <div class="col-md-4 col-6 mt-5">
                   <h4>Company</h4>
                   <ul style="list-style-type: none" class="p-0">
                     <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
