--- a/home.htm
+++ b/home.htm
@@ -194,7 +194,7 @@
       <section>
         <div class="container my-5 bg-img " style="background-color: #ffffff2d;">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5 mx-auto">
               <div class="row">
                 <div class="col-12">
                   <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, nulla.</h1>
@@ -218,9 +218,9 @@
               </div>
 
             </div>
-            <div class="col-md-6">
+            <div class="col-md-5 col-10 mx-auto">
               <div>
-                <img src="./img/new/webPhoneArtboard-1_014411.png" width="50%"  class="rounded px-5 mx-5" alt="">
+                <img  src="./img/new/webPhoneArtboard-1_014411.png" width="50%"  class="rounded " alt="">
               </div>
             </div>
           </div>
@@ -275,7 +275,7 @@
 
               </div>
               <div class="col-md-4 col-12">
-                <img src="./img/new/webCard3Artboard-1_014346.png" class="mx-5" width="100%" alt="">
+                <img src="./img/new/webCard3Artboard-1_014346.png" class="" width="100%" alt="">
               </div>
 
             </div>
@@ -497,7 +497,7 @@
 
               <div class="col-12 rounded bg-footer">
                 <div class="row m-5">
-                  <div class="col-md-1 col-3">
+                  <div class="col-md-1 col-5">
                     <div class="rounded-circle px-4 py-4 text-center" style="background-color:#5f5883 !important;"><i class="fa  fa-2x fa-envelope-o " aria-hidden="true"></i></div>
                   </div>
                   <div class="col-md-7">
