fix responsive mode

--- a/home.html
+++ b/home.html
@@ -93,29 +93,23 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-0 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link mx-2 color" aria-current="page" href="#">Home</a>
+            <a class="nav-link mx-2 color" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2 text-light" aria-current="page" href="#">blog</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="#">About</a>
+            <a class="nav-link text-light" href="/service.html">Pricing</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/checkout/service.html">Service</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="#">Blog</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/checkout/contact.html">Contact</a>
+            <a class="nav-link text-light" href="/contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="/sms.html">sms</a></li>
             </ul>
           </li>
         </ul>
@@ -253,7 +247,7 @@
               </div>
               <div class="col-md-5 col-12 rounded py-5 px-5" style="background-color: #101023;">
                 <div class="row">
-                  <div class="col-8">
+                  <div class="col-md-8">
                     <div class="row">
                       <div class="col-12">
                         <i class="fa fa-university rounded-circle p-3 bg-dark text-light mb-3" aria-hidden="true"></i>
@@ -274,7 +268,7 @@
                 </div>
 
               </div>
-              <div class="col-md-4 col-12">
+              <div class="col-md-6 col-12">
                 <img src="./img/new/webCard3Artboard-1_014346.png" class="" width="100%" alt="">
               </div>
 
