--- a/service.html
+++ b/service.html
@@ -97,29 +97,23 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-0 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link mx-2 color" aria-current="page" href="#">Home</a>
+            <a class="nav-link mx-2 color" aria-current="page" href="/home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2 text-light" aria-current="page" href="#">blog</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="#">About</a>
+            <a class="nav-link text-light" href="/service.html">Pricing</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/checkout/service.html">Service</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="#">Blog</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/checkout/contact.html">Contact</a>
+            <a class="nav-link text-light" href="/contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="/sms.html">sms</a></li>
             </ul>
           </li>
         </ul>
@@ -304,4 +298,14 @@
       </footer>
     
 </body>
+<script 
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous">
+</script>
+<script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous">
+</script>
 </html>
