--- a/sms.html
+++ b/sms.html
@@ -275,14 +275,14 @@
 
               <div class="col-12 rounded bg-footer">
                 <div class="row m-5">
-                  <div class="col-1">
-                    <div class="rounded-circle p-3" style="background-color:#5f5883 !important;"><i class="fa  fa-3x fa-envelope-o " aria-hidden="true"></i></div>
+                  <div class="col-md-1 col-5">
+                    <div class="rounded-circle px-4 py-4 text-center" style="background-color:#5f5883 !important;"><i class="fa  fa-2x fa-envelope-o " aria-hidden="true"></i></div>
                   </div>
-                  <div class="col-7">
+                  <div class="col-md-7">
                     <h3>Get Freshly Baked Marketing Tips</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita ullam nihil quasi assumenda aliquam pariatur voluptas, soluta asperiores, sint exercitationem dolor consequatur quisquam eius placeat.</p>
                   </div>
-                  <div class="col-4 mt-4">
+                  <div class="col-md-4 col-12 mt-4">
                     <div class="input-group mb-5">
                       <input type="text" class="form-control circle" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                       <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#ffffff !important;" id="basic-addon2"><i class="fa fa-envelope-o" aria-hidden="true"></i></span></button>
@@ -295,7 +295,7 @@
               </div>
 
               <div class="row">
-                <div class="col-md-4 rounded mt-5 p-3 " style="background-color:#463e7046 !important;">
+                <div class="col-md-4 col-12 rounded mt-5 p-3 " style="background-color:#463e7046 !important;">
                   <h3>KrezyPay</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptatem velit nemo voluptate nam aliquid.</p>
                   <div>
@@ -303,7 +303,7 @@
                     <i class="fa fa-youtube-square fa-3x" aria-hidden="true"></i>
                   </div>
                 </div>
-                <div class="col-md-4 mt-5">
+                <div class="col-md-4 col-12 mt-5">
                   <div class="row">
                     <div class="col-6 mx-auto">
                       <h4>Quick Links</h4>
@@ -317,7 +317,7 @@
                     </div>
                   </div> 
                 </div>
-                <div class="col-md-4 mt-5">
+                <div class="col-md-4 col-6 mt-5">
                   <h4>Company</h4>
                   <ul style="list-style-type: none" class="p-0">
                     <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
