--- a/service.html
+++ b/service.html
@@ -24,6 +24,9 @@
             background-color: #7c45e1;
             color: #fff
         }
+        .text-light:hover{
+          color: #7c45e1 !important;
+        }
 
         .btnColor-secondary{
           background-color: #7c45e1;
@@ -81,6 +84,16 @@
         .btn:hover{
           box-shadow:  0 1rem 3rem #aaa;
         }
+
+        .navbar-toggler {
+    padding: 0.25rem 0.75rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color: #7c45e1;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    transition: box-shadow .15s ease-in-out;
+}
 
           /** css for transiction **/
 .reveal {
