--- a/home.html
+++ b/home.html
@@ -25,6 +25,9 @@
             background-color: #7c45e1;
             color: #fff
         }
+        .text-light:hover{
+          color: #7c45e1 !important;
+        }
 
         .btnColor-secondary{
           background-color: #7c45e1;
@@ -163,6 +166,16 @@
     transform: translateX(0);
     opacity: 1;
   }
+}
+
+.navbar-toggler {
+    padding: 0.25rem 0.75rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color: #7c45e1;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    transition: box-shadow .15s ease-in-out;
 }
 
 
