--- a/sms.html
+++ b/sms.html
@@ -136,6 +136,16 @@
   }
 }
 
+.navbar-toggler {
+    padding: 0.25rem 0.75rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color: #7c45e1;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    transition: box-shadow .15s ease-in-out;
+}
+
 
 .reveal.active {
   opacity: 1;
