--- a/contact.html
+++ b/contact.html
@@ -153,6 +153,10 @@
   animation: fade-right 1s ease-in;
 }
 
+.fa{
+  color: #fff !important;
+}
+
 .navbar-toggler {
     padding: 0.25rem 0.75rem;
     font-size: 1.25rem;
