--- a/service.html
+++ b/service.html
@@ -84,8 +84,11 @@
         .btn:hover{
           box-shadow:  0 1rem 3rem #aaa;
         }
+.fa{
+  color: #fff !important;
+}
 
-        .navbar-toggler {
+  .navbar-toggler {
     padding: 0.25rem 0.75rem;
     font-size: 1.25rem;
     line-height: 1;
