change  color icon

--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,7 @@
               <div class="col-12">
                 <div class="row">
                   <div class="col-2">
-                    <i class="fa fa-phone p-4 rounded-circle bg-light text-dark" aria-hidden="true"></i>
+                    <i class="fa fa-phone p-4 rounded-circle bg-dark text-dark" aria-hidden="true"></i>
                   </div>
                   <div class="col-4">
                     <div class="float-start">
@@ -265,7 +265,7 @@
               <div class="col-12">
                 <div class="row">
                   <div class="col-2">
-                    <i class="fa fa-envelope p-4 rounded-circle bg-light text-dark" aria-hidden="true"></i>
+                    <i class="fa fa-envelope p-4 rounded-circle bg-dark text-dark" aria-hidden="true"></i>
                   </div>
                   <div class="col-3">
                     <div class="float-start">
