fix bug on color

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     >
     <link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-                .bgColor{
+        .bgColor{
             background-color:#0c0918!important;
             color:#7c45e1
         }
@@ -34,8 +34,12 @@
             color: #7c45e1;
         }
 
-        .text-light:hover{
+        .text-nav-light:hover{
           color: #7c45e1 !important;
+        }
+
+        .text-nav-light{
+          color: #fff !important;
         }
 
 
@@ -204,16 +208,16 @@
             <a class="nav-link mx-2 color" aria-current="page" href="/home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-2 text-light" aria-current="page" href="#">blog</a>
+            <a class="nav-link mx-2 text-nav-light" aria-current="page" href="#">blog</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/service.html">Pricing</a>
+            <a class="nav-link text-nav-light" href="/service.html">Pricing</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/contact.html">Contact Us</a>
+            <a class="nav-link text-nav-light" href="/contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-nav-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
