--- a/home.html
+++ b/home.html
@@ -25,8 +25,11 @@
             background-color: #7c45e1;
             color: #fff
         }
-        .text-light:hover{
+        .text-nav-light:hover{
           color: #7c45e1 !important;
+        }
+        .text-nav-light{
+          color: #fff !important;
         }
 
         .btnColor-secondary{
@@ -239,16 +242,16 @@ window.addEventListener("scroll", reveal);
             <a class="nav-link mx-2 color" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-2 text-light" aria-current="page" href="#">blog</a>
+            <a class="nav-link mx-2 text-nav-light" aria-current="page" href="#">blog</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/service.html">Pricing</a>
+            <a class="nav-link text-nav-light" href="/service.html">Pricing</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/contact.html">Contact Us</a>
+            <a class="nav-link text-nav-light" href="/contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-nav-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
