--- a/service.html
+++ b/service.html
@@ -24,8 +24,12 @@
             background-color: #7c45e1;
             color: #fff
         }
-        .text-light:hover{
+        .text-nav-light:hover{
           color: #7c45e1 !important;
+        }
+
+        .text-nav-light{
+          color: #fff !important;
         }
 
         .btnColor-secondary{
@@ -185,17 +189,14 @@
           <li class="nav-item">
             <a class="nav-link mx-2 color" aria-current="page" href="/home.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link mx-2 text-light" aria-current="page" href="#">blog</a>
+          <li class="nav-item mx-2">
+            <a class="nav-link text-nav-light" href="/service.html">Pricing</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/service.html">Pricing</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/contact.html">Contact Us</a>
+            <a class="nav-link text-nav-light" href="/contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-nav-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
