--- a/contact.html
+++ b/contact.html
@@ -281,7 +281,7 @@
             </div>
 
           </div>
-          <div class="col-md-6 col-12 mt-3 p-5 rounded" style="background-color: #f4f6ff !important;">
+          <div class="col-md-6 col-12 mt-3 p-5 rounded reveal fade-bottom" style="background-color: #f4f6ff !important;">
             <h3>Send Us Your Query Here</h3>
             <p>Let us know how to get back to you</p>
             <hr>
