--- a/home.html
+++ b/home.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to KrezyPay</title>
-
+    <title>Document</title>
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -25,12 +24,6 @@
             background-color: #7c45e1;
             color: #fff
         }
-        .text-nav-light:hover{
-          color: #7c45e1 !important;
-        }
-        .text-nav-light{
-          color: #fff !important;
-        }
 
         .btnColor-secondary{
           background-color: #7c45e1;
@@ -39,6 +32,14 @@
         .btnColor-secondary:hover{
             background-color: #fff;
             color: #7c45e1;
+        }
+
+        .text-nav-light:hover{
+          color: #7c45e1 !important;
+        }
+
+        .text-nav-light{
+          color: #fff !important;
         }
 
 
@@ -86,23 +87,8 @@
           box-shadow:  0 1rem 3rem #aaa;
         }
 
-        .box:hover {
-  animation-name: rotate;
-  animation-duration: 0.7s;
-  animation-direction: reverse;
-}
 
-@keyframes rotate {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-
-  /** css for transiction **/
+          /** css for transiction **/
 .reveal {
   position: relative;
   opacity: 0;
@@ -120,24 +106,10 @@
 .active.fade-right {
   animation: fade-right 1s ease-in;
 }
-
-
-.after {
+          /** css for transiction **/
+          .reveal {
   position: relative;
   opacity: 0;
-}
-
-.after.active {
-  opacity: 1;
-}
-.active.fade-bottom {
-  animation: fade-bottom 1s ease-in;
-}
-.active.fade-left {
-  animation: fade-left 1s ease-in;
-}
-.active.fade-right {
-  animation: fade-right 1s ease-in;
 }
 @keyframes fade-bottom {
   0% {
@@ -170,6 +142,21 @@
     opacity: 1;
   }
 }
+
+
+.reveal.active {
+  opacity: 1;
+}
+.active.fade-bottom {
+  animation: fade-bottom 1s ease-in;
+}
+.active.fade-left {
+  animation: fade-left 1s ease-in;
+}
+.active.fade-right {
+  animation: fade-right 1s ease-in;
+}
+
 .fa{
   color: #fff !important;
 }
@@ -185,47 +172,26 @@
 }
 
 
-    </style>
-<script defer >
-  function after() {
-  var reveals = document.querySelectorAll(".after");
-
-  for (var i = 0; i < reveals.length; i++) {
-    var windowHeight = window.innerHeight;
-    var elementTop = reveals[i].getBoundingClientRect().top;
-    var elementVisible = 150;
-
-    if (elementTop < windowHeight - elementVisible) {
-      reveals[i].classList.add("active");
-    } else {
-      reveals[i].classList.remove("active");
+  </style>
+  <script defer >
+      function reveal() {
+      var reveals = document.querySelectorAll(".reveal");
+    
+      for (var i = 0; i < reveals.length; i++) {
+        var windowHeight = window.innerHeight;
+        var elementTop = reveals[i].getBoundingClientRect().top;
+        var elementVisible = 150;
+    
+        if (elementTop < windowHeight - elementVisible) {
+          reveals[i].classList.add("active");
+        } else {
+          reveals[i].classList.remove("active");
+        }
+      }
     }
-  }
-}
-// DOMContentLoaded
-window.addEventListener("DOMContentLoaded", after);
-</script>
-
-
-<script defer >
-  function reveal() {
-  var reveals = document.querySelectorAll(".reveal");
-
-  for (var i = 0; i < reveals.length; i++) {
-    var windowHeight = window.innerHeight;
-    var elementTop = reveals[i].getBoundingClientRect().top;
-    var elementVisible = 150;
-
-    if (elementTop < windowHeight - elementVisible) {
-      reveals[i].classList.add("active");
-    } else {
-      reveals[i].classList.remove("active");
-    }
-  }
-}
-// DOMContentLoaded
-window.addEventListener("scroll", reveal);
-    </script>
+    // DOMContentLoaded
+    window.addEventListener("scroll", reveal);
+  </script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bgColor">
@@ -234,12 +200,12 @@ window.addEventListener("scroll", reveal);
         <img src="https://app.krezypay.com/assets/img/logo.png" height="64px" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon color"></span>
+        <span ><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-0 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link mx-2 color" aria-current="page" href="/">Home</a>
+            <a class="nav-link mx-2 color" aria-current="page" href="/home.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link mx-2 text-nav-light" aria-current="page" href="#">blog</a>
