fix icon on footer

--- a/home.html
+++ b/home.html
@@ -600,11 +600,11 @@
         <div class="container-fluid bg-img text-light py-5" style="background-color:#0c0918 !important;">
           <div class="container">
             <div class="row">
-
+  
               <div class="col-12 rounded reveal fade-right  bg-footer">
                 <div class="row m-5 ">
                   <div class="col-md-1  col-5">
-                    <div class="rounded-circle px-4 py-4 text-center" style="background-color:#5f5883 !important;"><i class="fa  fa-2x fa-envelope-o " aria-hidden="true"></i></div>
+                    <div class=""  ><i style="border-radius: 50%; background-color: #5f5883; padding: 16px;"  class="fa fa-2x fa-envelope-o " aria-hidden="true"></i></div>
                   </div>
                   <div class="col-md-7">
                     <h3>Get Freshly Baked Marketing Tips</h3>
@@ -615,13 +615,13 @@
                       <input type="text" class="form-control circle" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                       <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#ffffff !important;" id="basic-addon2"><i class="fa fa-envelope-o" aria-hidden="true"></i></span></button>
                     </div>
-
+  
                   </div>
                 </div>
                 
-
+  
               </div>
-
+  
               <div class="row">
                 <div class="col-md-4 col-12 rounded reveal fade-bottom mt-5 p-3 " style="background-color:#463e7046 !important;">
                   <h3>KrezyPay</h3>
