--- a/sms.html
+++ b/sms.html
@@ -371,11 +371,11 @@
         <div class="container-fluid bg-img text-light py-5" style="background-color:#0c0918 !important;">
           <div class="container">
             <div class="row">
-
-              <div class="col-12 rounded bg-footer">
-                <div class="row m-5">
-                  <div class="col-md-1 col-5">
-                    <div class="rounded-circle px-4 py-4 text-center" style="background-color:#5f5883 !important;"><i class="fa  fa-2x fa-envelope-o " aria-hidden="true"></i></div>
+  
+              <div class="col-12 rounded reveal fade-right  bg-footer">
+                <div class="row m-5 ">
+                  <div class="col-md-1  col-5">
+                    <div class=""  ><i style="border-radius: 50%; background-color: #5f5883; padding: 16px;"  class="fa fa-2x fa-envelope-o " aria-hidden="true"></i></div>
                   </div>
                   <div class="col-md-7">
                     <h3>Get Freshly Baked Marketing Tips</h3>
@@ -386,15 +386,15 @@
                       <input type="text" class="form-control circle" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                       <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#ffffff !important;" id="basic-addon2"><i class="fa fa-envelope-o" aria-hidden="true"></i></span></button>
                     </div>
-
+  
                   </div>
                 </div>
                 
-
+  
               </div>
-
+  
               <div class="row">
-                <div class="col-md-4 col-12 rounded mt-5 p-3 " style="background-color:#463e7046 !important;">
+                <div class="col-md-4 col-12 rounded reveal fade-bottom mt-5 p-3 " style="background-color:#463e7046 !important;">
                   <h3>KrezyPay</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptatem velit nemo voluptate nam aliquid.</p>
                   <div>
@@ -404,7 +404,7 @@
                 </div>
                 <div class="col-md-4 col-12 mt-5">
                   <div class="row">
-                    <div class="col-6 mx-auto">
+                    <div class="col-6 mx-auto reveal fade-bottom">
                       <h4>Quick Links</h4>
                   <ul style="list-style-type: none" class="p-0">
                     <li class="color-text"> <i class="fa fa-angle-right my-2 mx-2" aria-hidden="true"></i> Payment Integration</li>
@@ -416,7 +416,7 @@
                     </div>
                   </div> 
                 </div>
-                <div class="col-md-4 col-6 mt-5">
+                <div class="col-md-4 col-6 mt-5 reveal fade-bottom">
                   <h4>Company</h4>
                   <ul style="list-style-type: none" class="p-0">
                     <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
