--- a/gift-card-form.html
+++ b/gift-card-form.html
@@ -67,6 +67,36 @@
             border: 1px solid white;
             border-radius: 16px;
         }
+        .none{
+            display: none;
+        }
+
+        @media screen and (max-width: 600px) {
+            .container{
+            display: inline-block;
+            padding-left: 0%;
+            padding-right: 0%;
+            margin-top: 1%;
+            }
+            .form-control{
+            background: transparent;
+            border: none;
+            border-bottom:2px solid #000000;
+            padding: 0 30px 0 0;
+            border-radius: 0;
+            height: 40px;
+            color: #27173E;
+            font-size: 15px;
+            margin: 10px;
+            width: 100%;
+            }
+            .wrap{
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: row;
+                margin-top: 2%;
+            }
+        }
 
     </style>
 </head>
@@ -85,8 +115,9 @@
             <div class="center">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nesciunt earum officia voluptatibus velit quae.</p>
             </div>
-            <div class="center">
-                <b style="font-size: larger;">Order #</b> #494nfj44  / <b style="font-size: larger;"> Order Date</b> 2023-05-01
+            <div class="center wrap">
+               <div> <b style="font-size: larger; margin: 10px;">Order# :</b> #494nfj44 </div>
+                <div> <b style="font-size: larger; margin: 10px;"> Order Date :</b> 2023-05-01 </div> 
             </div>
             <div class="center mt form-group">
                 <input type="text" class="form-control" placeholder="nom">
