add email input

--- a/gift-card-form.html
+++ b/gift-card-form.html
@@ -120,11 +120,14 @@
                 <div> <b style="font-size: larger; margin: 10px;"> Order Date :</b> 2023-05-01 </div> 
             </div>
             <div class="center mt form-group">
-                <input type="text" class="form-control" placeholder="nom">
-                <input type="text" class="form-control" placeholder="prenom">
+                <input disabled type="text" value="saintaimepeterson@gmail.com" class="form-control" style="width: 950px;" placeholder="Email">
             </div>
             <div class="center mt form-group">
-                <input type="text" class="form-control" width="500px" placeholder="Numero">
+                <input type="text"  class="form-control" placeholder="nom">
+                <input type="text"  class="form-control" placeholder="prenom">
+            </div>
+            <div class="center mt form-group">
+                <input type="text" class="form-control" style="width: 950px;" placeholder="Numero">
             </div>
             <div class="center">
                 <button class="btn btn-round">
