add link on theme and condition

--- a/page_card.html
+++ b/page_card.html
@@ -75,7 +75,7 @@
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">
-                                Enregistrer mes informations en toute sécurité pour le paiement en un clic
+                                <a style="text-decoration: none; color: black;" href="">Enregistrer mes informations en toute sécurité pour le paiement en un clic</a> 
                             </label>
                         </div>
                     </div>
