add extention html

--- a/index.htm
+++ b/index.htm
@@ -52,9 +52,9 @@
 <body>
     <div class="container mt-5">
         <div class="row center">
-            <a href="./checkout.htm" type="button" class="btn bg-primary btn-round">Checkout</a>
-            <a href="./home.htm" type="button" class="btn bg-primary  btn-round">Home</a>
-            <a href="./card.htm" type="button" class="btn bg-primary  btn-round">Master Card</a>
+            <a href="./checkout.html" type="button" class="btn bg-primary btn-round">Checkout</a>
+            <a href="./home.html" type="button" class="btn bg-primary  btn-round">Home</a>
+            <a href="./card.html" type="button" class="btn bg-primary  btn-round">Master Card</a>
             <a href="./factureEmail.html" type="button" class="btn bg-primary  btn-round">Email Facture</a>
         </div>
     </div>
