--- a/home.html
+++ b/home.html
@@ -205,28 +205,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-0 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link mx-2 color" aria-current="page" href="/home.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mx-2 text-nav-light" aria-current="page" href="#">blog</a>
+            <a class="nav-link mx-2 color" aria-current="page" href="./home.html">Home</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-nav-light" href="/service.html">Pricing</a>
+            <a class="nav-link text-nav-light" href="./service.html">Pricing</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-nav-light" href="/contact.html">Contact Us</a>
+            <a class="nav-link text-nav-light" href="./contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-nav-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/sms.html">sms</a></li>
+              <li><a class="dropdown-item" href="./sms.html">sms</a></li>
             </ul>
           </li>
         </ul>
         <div class="d-flex">
-          <button class="btn btn-round btnColor" type="submit">Download</button>
+          <a href="https://play.google.com/store/apps/details?id=com.krezypay.krezypay" class="btn btn-round btnColor" type="submit">Download</a>
         </div>
       </div>
     </div>
@@ -571,7 +568,7 @@
               <div class="col-md-5">
                 <div class="row my-5">
                   <div class="col-12 my-1">
-                    <div style="background-color: #f4f6ff;" class="float-start py-1 px-2 rounded-circle"><i class="fa color-text fa-circle" aria-hidden="true"></i></div>
+                    <div style="background-color: #000000;" class="float-start py-1 px-2 rounded-circle"><i class="fa color-text fa-circle" aria-hidden="true"></i></div>
                     <h3>Download The App</h3>
                     <p class="color-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, tenetur.</p>
                   </div>
@@ -613,7 +610,7 @@
                   <div class="col-md-4 col-12 mt-4">
                     <div class="input-group mb-5">
                       <input type="text" class="form-control circle" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                      <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#ffffff !important;" id="basic-addon2"><i class="fa fa-envelope-o" aria-hidden="true"></i></span></button>
+                      <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#000000 !important;" id="basic-addon2"><i class="fa fa-envelope-o bg-dark aria-hidden="true"></i></span></button>
                     </div>
   
                   </div>
@@ -648,8 +645,8 @@
                 <div class="col-md-4 col-6 mt-5 reveal fade-bottom">
                   <h4>Company</h4>
                   <ul style="list-style-type: none" class="p-0">
-                    <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
-                    <li class=""><i class="fa fa-envelope p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Email Us <br><span class="color-text ">example@gmail.com</span></li>
+                    <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-dark text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
+                    <li class=""><i class="fa fa-envelope p-2 my-2 mx-2 rounded-circle bg-dark text-dark" aria-hidden="true"></i> Email Us <br><span class="color-text ">example@gmail.com</span></li>
                   </ul>
                 </div>
               </div>
