--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KrezyPay | Contact</title>
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -143,6 +143,14 @@
   }
 }
 
+a{
+  color: #fff !important;
+}
+
+a:hover{
+  color: #7c45e1 !important;
+}
+
 
 .reveal.active {
   opacity: 1;
@@ -199,34 +207,31 @@
       <a class="navbar-brand color" href="/checkout/home.htm">
         <img src="https://app.krezypay.com/assets/img/logo.png" height="64px" alt="">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-toggler" type="a" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span ><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
-      </button>
+      </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-0 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link mx-2 color" aria-current="page" href="/home.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mx-2 text-nav-light" aria-current="page" href="#">blog</a>
+            <a class="nav-link mx-2 color" aria-current="page" href="./home.html">Home</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-nav-light" href="/service.html">Pricing</a>
+            <a class="nav-link text-nav-light" href="./service.html">Pricing</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-nav-light" href="/contact.html">Contact Us</a>
+            <a class="nav-link text-nav-light" href="./contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-nav-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-nav-light" href="#" id="navbarDropdown" role="a" data-bs-toggle="dropdown" aria-expanded="false">
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/sms.html">sms</a></li>
+              <li><a class="dropdown-item" href="./sms.html">sms</a></li>
             </ul>
           </li>
         </ul>
         <div class="d-flex">
-          <button class="btn btn-round btnColor" type="submit">Download</button>
+          <a href="https://play.google.com/store/apps/details?id=com.krezypay.krezypay"  class="btn btn-round btnColor" type="submit">Download</a>
         </div>
       </div>
     </div>
@@ -351,7 +356,7 @@
                   <div class="col-md-4 col-12 mt-4">
                     <div class="input-group mb-5">
                       <input type="text" class="form-control circle" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                      <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#ffffff !important;" id="basic-addon2"><i class="fa fa-envelope-o" aria-hidden="true"></i></span></button>
+                      <a class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#000000 !important;" id="basic-addon2"><i class="fa fa-envelope-o bg-dark aria-hidden="true"></i></span></a>
                     </div>
   
                   </div>
@@ -386,8 +391,8 @@
                 <div class="col-md-4 col-6 mt-5 reveal fade-bottom">
                   <h4>Company</h4>
                   <ul style="list-style-type: none" class="p-0">
-                    <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
-                    <li class=""><i class="fa fa-envelope p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Email Us <br><span class="color-text ">example@gmail.com</span></li>
+                    <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-dark text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
+                    <li class=""><i class="fa fa-envelope p-2 my-2 mx-2 rounded-circle bg-dark text-dark" aria-hidden="true"></i> Email Us <br><span class="color-text ">example@gmail.com</span></li>
                   </ul>
                 </div>
               </div>
