--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KrezyPay | Home</title>
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -143,6 +143,14 @@
   }
 }
 
+a{
+  color: #fff !important;
+}
+
+a:hover{
+  color: #7c45e1 !important;
+}
+
 
 .reveal.active {
   opacity: 1;
@@ -199,9 +207,9 @@
       <a class="navbar-brand color" href="/checkout/home.htm">
         <img src="https://app.krezypay.com/assets/img/logo.png" height="64px" alt="">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-toggler" type="a" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span ><i class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
-      </button>
+      </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-0 mb-lg-0">
           <li class="nav-item">
@@ -214,7 +222,7 @@
             <a class="nav-link text-nav-light" href="./contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-nav-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-nav-light" href="#" id="navbarDropdown" role="a" data-bs-toggle="dropdown" aria-expanded="false">
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -223,7 +231,7 @@
           </li>
         </ul>
         <div class="d-flex">
-          <a href="https://play.google.com/store/apps/details?id=com.krezypay.krezypay" class="btn btn-round btnColor" type="submit">Download</a>
+          <a href="https://play.google.com/store/apps/details?id=com.krezypay.krezypay"  class="btn btn-round btnColor" type="submit">Download</a>
         </div>
       </div>
     </div>
@@ -241,7 +249,7 @@
 
                     <div class="row mt-5">
                       <div class="col-md-4 col-6">
-                        <button class="btn btn-round btnColor" type="submit">Get Started</button>
+                        <a  href="https://app.krezypay.com" class="btn btn-round btnColor" type="submit">Get Started</a>
                       </div>
                       <div class="col-md-4 col-6">
                         <img src="./img/newclients.png" height="60%"  alt="">
@@ -350,7 +358,7 @@
                     <p class="color-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat voluptas explicabo, voluptatibus nesciunt veniam quibusdam modi quas beatae quo, porro, hic magni omnis laboriosam laudantium.</p>
                   </div>
                   <div class="col-12">
-                    <button class="btn btnColor-secondary btn-round float-end me-5"> Get Started</button>
+                    <a  href="https://app.krezypay.com" class="btn btnColor-secondary btn-round float-end me-5">Get Started</a>
                   </div>
                 </div>
               </div>
@@ -466,7 +474,7 @@
                   <p class="color-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat voluptas explicabo, voluptatibus nesciunt veniam quibusdam modi quas beatae quo, porro, hic magni omnis laboriosam laudantium.</p>
                 </div>
                 <div class="col-12">
-                  <button class="btn btnColor-secondary btn-round float-end me-5"> Get Started</button>
+                  <a href="https://app.krezypay.com" class="btn btnColor-secondary btn-round float-end me-5"> Get Started</a>
                 </div>
               </div>
             </div>
@@ -477,7 +485,7 @@
                   <i class="fa fa-credit-card-alt fa-3x rounded-circle my-3" aria-hidden="true"></i>
                   <h3>Payment Methods</h3>
                   <p class="color-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum numquam, in minus libero doloribus minima?</p>
-                  <button class="btn btn-round btnColor-secondary col-12 my-3">Learn More</button>
+                  <a href="https://api.krezypay.com/" class="btn btn-round btnColor-secondary col-12 my-3">Learn More</a>
                 </div>
               </div>
             </div>
@@ -488,7 +496,7 @@
                   <i class="fa fa-credit-card-alt fa-3x rounded-circle my-3" aria-hidden="true"></i>
                   <h3>Developer's API</h3>
                   <p class="color-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum numquam, in minus libero doloribus minima?</p>
-                  <button class="btn btn-round btnColor-secondary col-12 my-3">Learn More</button>
+                  <a href="https://api.krezypay.com/login" class="btn btn-round btnColor-secondary col-12 my-3">Learn More</a>
                 </div>
               </div>
             </div>
@@ -499,7 +507,7 @@
                   <i class="fa fa-google-wallet fa-3x rounded-circle my-3" aria-hidden="true"></i>
                   <h3>E-Wallet</h3>
                   <p class="color-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum numquam, in minus libero doloribus minima?</p>
-                  <button class="btn btn-round btnColor-secondary col-12 my-3">Learn More</button>
+                  <a href="https://api.krezypay.com/login" class="btn btn-round btnColor-secondary col-12 my-3">Learn More</a>
                 </div>
               </div>
             </div>
@@ -510,7 +518,7 @@
                   <i class="fa fa-credit-card-alt fa-3x rounded-circle my-3" aria-hidden="true"></i>
                   <h3>Payment Methods</h3>
                   <p class="color-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum numquam, in minus libero doloribus minima?</p>
-                  <button class="btn btn-round btnColor-secondary col-12 my-3">Learn More</button>
+                  <a href="https://api.krezypay.com/login" class="btn btn-round btnColor-secondary col-12 my-3">Learn More</a>
                 </div>
               </div>
             </div>
@@ -521,7 +529,7 @@
                   <i class="fa fa-credit-card-alt fa-3x rounded-circle my-3" aria-hidden="true"></i>
                   <h3>Developer's API</h3>
                   <p class="color-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum numquam, in minus libero doloribus minima?</p>
-                  <button class="btn btn-round btnColor-secondary col-12 my-3">Learn More</button>
+                  <a href="https://api.krezypay.com/login" class="btn btn-round btnColor-secondary col-12 my-3">Learn More</a>
                 </div>
               </div>
             </div>
@@ -532,7 +540,7 @@
                   <i class="fa fa-google-wallet fa-3x rounded-circle my-3" aria-hidden="true"></i>
                   <h3>E-Wallet</h3>
                   <p class="color-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum numquam, in minus libero doloribus minima?</p>
-                  <button class="btn btn-round btnColor-secondary col-12 my-3">Learn More</button>
+                  <a href="https://api.krezypay.com/login" class="btn btn-round btnColor-secondary col-12 my-3">Learn More</a>
                 </div>
               </div>
             </div>
@@ -568,7 +576,7 @@
               <div class="col-md-5">
                 <div class="row my-5">
                   <div class="col-12 my-1">
-                    <div style="background-color: #000000;" class="float-start py-1 px-2 rounded-circle"><i class="fa color-text fa-circle" aria-hidden="true"></i></div>
+                    <div style="background-color: #f4f6ff;" class="float-start py-1 px-2 rounded-circle"><i class="fa color-text fa-circle" aria-hidden="true"></i></div>
                     <h3>Download The App</h3>
                     <p class="color-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, tenetur.</p>
                   </div>
@@ -610,7 +618,7 @@
                   <div class="col-md-4 col-12 mt-4">
                     <div class="input-group mb-5">
                       <input type="text" class="form-control circle" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                      <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#000000 !important;" id="basic-addon2"><i class="fa fa-envelope-o bg-dark aria-hidden="true"></i></span></button>
+                      <a class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#000000 !important;" id="basic-addon2"><i class="fa fa-envelope-o bg-dark aria-hidden="true"></i></span></a>
                     </div>
   
                   </div>
