--- a/sms.html
+++ b/sms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMS | KrezyPay</title>
+    <title>KrezyPay | Sms</title>
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -196,28 +196,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-0 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link mx-2 color" aria-current="page" href="/home.html">Home</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link mx-2 text-light" aria-current="page" href="#">blog</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/service.html">Pricing</a>
+            <a class="nav-link text-light" href="./service.html">Pricing</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-light" href="/contact.html">Contact Us</a>
+            <a class="nav-link text-light" href="./contact.html">Contact Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/sms.html">sms</a></li>
+              <li><a class="dropdown-item" href="./sms.html">sms</a></li>
             </ul>
           </li>
         </ul>
         <div class="d-flex">
-          <button class="btn btn-round btnColor" type="submit">Download</button>
+          <a href="https://play.google.com/store/apps/details?id=com.krezypay.krezypay"  class="btn btn-round btnColor" type="submit">Download</a>
         </div>
       </div>
     </div>
@@ -384,7 +381,7 @@
                   <div class="col-md-4 col-12 mt-4">
                     <div class="input-group mb-5">
                       <input type="text" class="form-control circle" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                      <button class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#ffffff !important;" id="basic-addon2"><i class="fa fa-envelope-o" aria-hidden="true"></i></span></button>
+                      <a class="btn btn-light"><span class="input-group-text rounded-circle " style="background-color:#000000 !important;" id="basic-addon2"><i class="fa fa-envelope-o bg-dark aria-hidden="true"></i></span></a>
                     </div>
   
                   </div>
@@ -419,8 +416,8 @@
                 <div class="col-md-4 col-6 mt-5 reveal fade-bottom">
                   <h4>Company</h4>
                   <ul style="list-style-type: none" class="p-0">
-                    <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
-                    <li class=""><i class="fa fa-envelope p-2 my-2 mx-2 rounded-circle bg-light text-dark" aria-hidden="true"></i> Email Us <br><span class="color-text ">example@gmail.com</span></li>
+                    <li class=""> <i class="fa fa-phone p-2 my-2 mx-2 rounded-circle bg-dark text-dark" aria-hidden="true"></i> Phone Number <br> <span class="color-text">+50936685393</span></li>
+                    <li class=""><i class="fa fa-envelope p-2 my-2 mx-2 rounded-circle bg-dark text-dark" aria-hidden="true"></i> Email Us <br><span class="color-text ">example@gmail.com</span></li>
                   </ul>
                 </div>
               </div>
@@ -429,6 +426,7 @@
           </div>
         </div>
       </footer>
+      
     </body>
     <script 
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
