--- a/detail.html
+++ b/detail.html
@@ -217,7 +217,7 @@
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./sms.html">sms</a></li>
+              <li><a class="dropdown-item text-dark" href="./sms.html">sms</a></li>
             </ul>
           </li>
         </ul>
