--- a/sms.html
+++ b/sms.html
@@ -226,7 +226,7 @@ a:hover{
               services
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./sms.html">sms</a></li>
+              <li><a class="dropdown-item text-dark" href="./sms.html">sms</a></li>
             </ul>
           </li>
         </ul>
